# agent.rs

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  setup.sh
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  guardrail.rs  lib.rs  protocol.rs  skill.rs  skill_manifest.rs  tool.rs
crates/agent-native/: Cargo.toml  README.md
crates/agent-native/src/: llama_cpp_backend.rs  llm.rs  main.rs  skill_discovery.rs
crates/agent-wasm/: Cargo.toml
crates/agent-wasm/src/: lib.rs
docs/: index.html  style.css
examples/browser/: .gitignore  README.md  agent-wasm.d.ts  build-wasm.sh  index.html  main.ts  package-lock.json  package.json  run-dev.sh  tsconfig.json  vite.config.ts
examples/edge/: .gitignore  README.md  build-wasm.sh  deno.json  main.ts
examples/shell/: README.md
examples/with-extraction-skill/: README.md  demo.md
skills/: mod.rs
skills/extraction/: README.md  SKILL.md  mod.rs  schema.json
